--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </style>
     <script>
         var cozinhaObjetos = [
-            ["geladeira", "Geladeira", 25, true],
-            ["microondas", "Micro-ondas", 75, true],
-            ["fogao", "Fogão", 150, true],
-            ["loucas", "Lava-louças", 100, true]
+            ["geladeira", "E", 25, true],
+            ["microondas", "C", 75, true],
+            ["fogao", "O", 150, true],
+            ["loucas", "H", 100, true]
         ];
 
         // Função que será chamada ao clicar ou tocar em um objeto
@@ -47,10 +47,10 @@
 <!-- Exemplo de imagem com mapa de imagem -->
 <img src="cozinha.jpeg" alt="Cozinha" usemap="#mapaCozinha">
 <map name="mapaCozinha">
-    <area shape="rect" coords="34,44,270,350" alt="Geladeira" href="javascript:void(0)" onclick="objetoClicado(0)">
-    <area shape="rect" coords="290,172,333,250" alt="Micro-ondas" href="javascript:void(0)" onclick="objetoClicado(1)">
-    <area shape="rect" coords="130,230,250,320" alt="Fogão" href="javascript:void(0)" onclick="objetoClicado(2)">
-    <area shape="rect" coords="340,270,430,350" alt="Lava-louças" href="javascript:void(0)" onclick="objetoClicado(3)">
+    <area shape="rect" coords="152,188,99,133" alt="Geladeira" href="javascript:void(0)" onclick="objetoClicado(0)">
+    <area shape="rect" coords="272,205,60,73" alt="Micro-ondas" href="javascript:void(0)" onclick="objetoClicado(1)">
+    <area shape="rect" coords="349,202,56,71" alt="Fogão" href="javascript:void(0)" onclick="objetoClicado(2)">
+    <area shape="rect" coords="423,175,84,90" alt="Lava-louças" href="javascript:void(0)" onclick="objetoClicado(3)">
 	<area shape="rect" coords="0,0,430,350" alt="Lava-louças" href="javascript:void(0)" clickable>
 </map>
 
