--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h1>Clique em um objeto da cozinha:</h1>
 <!-- Exemplo de imagem com mapa de imagem -->
 <img src="cozinha.jpeg" alt="Cozinha" usemap="#mapaCozinha">
-<map name="mapaCozinha">
+<map id="mapaCozinha">
     <area shape="rect" coords="152,188,250,280" alt="E"  onclick="objetoClicado(0)">
     <area shape="rect" coords="272,205,324,260" alt="C"  onclick="objetoClicado(1)">
     <area shape="rect" coords="349,202,390,260" alt="O"  onclick="objetoClicado(2)">
