--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
             max-width: 100%;
             height: auto;
         }
+	@media screen and (max-width: 1000){
+	img {
+	width: 100%;
+	height: auto;
+		
+	}
+		
+	}
     </style>
     <script>
         var cozinhaObjetos = [
