--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		
 	}
     </style>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"></script>
+	<script type="text/javascript" src="redist/jquery.3.7.1.min.js"></script>
+	<script type="text/javascript" src="../dist/jquery.imagemapster.js"></script>
     <script>
         var cozinhaObjetos = [
             ["geladeira", "E", 25, true],
