--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
 
 <h1>Clique em um objeto da cozinha:</h1>
 <!-- Exemplo de imagem com mapa de imagem -->
-<img src="cozinha.jpeg" alt="Cozinha" usemap="#mapaCozinha">
+
+	
+<img src="transferir.jpeg" alt="Cozinha" usemap="#mapaCozinha">
 <map name="mapaCozinha">
-    <area shape="rect" coords="152,188,250,280" alt="E"  onclick="objetoClicado(0)">
-    <area shape="rect" coords="272,205,324,260" alt="C"  onclick="objetoClicado(1)">
-    <area shape="rect" coords="349,202,390,260" alt="O"  onclick="objetoClicado(2)">
-    <area shape="rect" coords="423,175,500,264" alt="H" onclick="objetoClicado(3)">
-	<area shape="rect" coords="0,0,430,350" alt="Lava-louças" clickable>
+    <area  alt="e" href="javascript:void(0)" coords="149,208,168,299,257,283,239,190" onclick="objetoClicado(0)"shape="poly"></area>
+    <area alt="c"   href="javascript:void(0)" coords="287,212,262,237,271,269,296,279,334,253,316,211" onclick="objetoClicado(1)" shape="poly"></area>
+    <area  alt="o"   href="javascript:void(0)" coords="363,204,345,240,368,271,404,249,400,213" onclick="objetoClicado(2)" shape="poly"></area>
+    <area  alt="h"   href="javascript:void(0)" coords="460,196,493,209,482,266,514,260,470,175,452,167,415,187,426,219,421,276,500,249" onclick="objetoClicado(3)" shape="poly"></area>
 </map>
+ 
 
 </body>
 </html>
