--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- Exemplo de imagem com mapa de imagem -->
 
 	
-<img src="transferir.jpeg" alt="Cozinha" usemap="#mapaCozinha">
+<img src="cozinha.jpeg" alt="Cozinha" usemap="#mapaCozinha">
 <map name="mapaCozinha">
     <area  alt="e" href="javascript:void(0)" coords="149,208,168,299,257,283,239,190" onclick="objetoClicado(0)"shape="poly"></area>
     <area alt="c"   href="javascript:void(0)" coords="287,212,262,237,271,269,296,279,334,253,316,211" onclick="objetoClicado(1)" shape="poly"></area>
