--- a/index.html
+++ b/index.html
@@ -19,9 +19,30 @@
 		
 	}
     </style>
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"></script>
-	<script type="text/javascript" src="redist/jquery.3.7.1.min.js"></script>
-	<script type="text/javascript" src="../dist/jquery.imagemapster.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/imagemapster/1.8.0/jquery.imagemapster.min.js" integrity="sha512-18b1YKEQCvv8P4pvvf1lFmJIYLjU6gqzz8Cw+J/Q5lFL5bf56QtK8xMLH/7Vvv+FGRxscyeP7G5pq2AgtQEyAA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	
+	<!-- Optional: If targeting ES5 browers, as of ImageMapster v1.3.0, a Promise polyfill is required! -->
+<script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"
+></script>
+<script
+  language="text/javascript"
+  src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+></script>
+<script language="text/javascript" src="jquery.imagemapster.min.js"></script>
+	<script>
+		$('img').mapster({
+  fillColor: 'ff0000',
+  stroke: true,
+  singleSelect: true,
+  enableAutoResizeSupport: true,
+  autoResize: true,
+  autoResizeDelay: 0,
+  autoResizeDuration: 0
+});
+		
+	</script>
     <script>
         var cozinhaObjetos = [
             ["geladeira", "E", 25, true],
