--- a/index.html
+++ b/index.html
@@ -23,20 +23,9 @@
 		
 	}
     </style>
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-	<script  type="text/javascript" src="https://cdn.jsdelivr.net/npm/imagemapster@1.8.0/dist/jquery.imagemapster.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/imagemapster/1.8.0/jquery.imagemapster.min.js" integrity="sha512-18b1YKEQCvv8P4pvvf1lFmJIYLjU6gqzz8Cw+J/Q5lFL5bf56QtK8xMLH/7Vvv+FGRxscyeP7G5pq2AgtQEyAA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	
-	<!-- Optional: If targeting ES5 browers, as of ImageMapster v1.3.0, a Promise polyfill is required! -->
-<script
-  type="text/javascript"
-  src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"
-></script>
-<script
-  language="text/javascript"
-  src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-></script>
-<script language="text/javascript" src="jquery.imagemapster.min.js"></script>
+<script type="text/javascript" src="jquery-3.7.1.min.js"></script><!-- Optional: If targeting ES5 browers, as of ImageMapster v1.3.0, a Promise polyfill is required! -->
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"></script>
+<script type="text/javascript" src="dist/jquery.imagemapster.min.js"></script>
 	<script>
 		$('img[mapaCozinha]').mapster({
   fillColor: 'ff0000',
