--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
   fillColor: '0096FF',
   stroke: true,
   strokeWidth: 2, 
-  enableAutoResizeSupport: true,
-  autoResize: true,
-  autoResizeDelay: 0,
-  autoResizeDuration: 0
+  scaleMap: true
 			
 });
 	}
