--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             ["geladeira", "E", 25, true],
             ["microondas", "C", 75, true],
             ["fogao", "O", 150, true],
-            ["loucas", "H", 100, true]
-	    ["video", "O1", 180, true]
-	    ["ventilador", "U", 90, true]
-	    ["ar", "s", 10, true]
+            ["loucas", "H", 100, true],
+	    ["video", "O1", 180, true],
+	    ["ventilador", "U", 90, true],
+	    ["ar", "s", 10, true],
             ["tv", "E1", 65, true]
         ];
 
