--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 });})
 
 
-
-
+		</script>
+<script>
 	//Array/objeto dos objetos do mapa 
         var cozinhaObjetos = [
             ["geladeira", "E", 25, true],
