--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"></script>
 <!-- Linka o arquivo 'imagemapster' dentro do seu repositorio -->
 <script type="text/javascript" src="dist/jquery.imagemapster.min.js"></script>
+    <!-- <script> para o plugin-->
     <script>
 	//Inicia o plugin imageMapster 'jQuery'
 	$(document).ready(function () {
@@ -29,13 +30,56 @@
   //Habilita a borda 
   stroke: true,
   strokeWidth: 2, 
+  strokeColor:'454B1B',
+  fade: true,showToolTip: true,
+  
   //Escala o <map> e seus elemento para a resolução do dispositivo
-  scaleMap: true
-			
+  scaleMap: true,
+  showToolTip: true,
+  toolTip: function (data) {
+  return $(data.target).data('data-title');	
+  };
+  area[
+	  {
+		key: 'e',
+		toolTip: 'Letra e'
+	  },
+	  {
+		key: 'c',
+		toolTip: 'Letra c'
+	  },
+		{
+		key: 'o',
+		toolTip: 'Letra o'
+	  },
+		{
+		key: 'h',
+		toolTip: 'Letra h'
+	  },
+		{
+		key: 'o1',
+		toolTip: 'Letra o'
+	  },
+		{
+		key: 'u',
+		toolTip: 'Letra u'
+	  },
+		{
+		key: 's',
+		toolTip: 'Letra s'
+	  },
+		{
+		key: 'e1',
+		toolTip: 'Letra e'
+	  }
+	  
+	  
+  ]
 });})
 
 
 		</script>
+<!-- <script> para scripts no geral -->
 <script>
 	//Array/objeto dos objetos do mapa 
         var cozinhaObjetos = [
@@ -67,10 +111,10 @@
 	
 <img src="cozinha.jpeg" alt="Cozinha" id="cozinha" usemap="#mapaCozinha">
 <map name="mapaCozinha">
-    <area  alt="e" data-title="e" href="javascript:void(0)" coords="149,208,168,299,257,283,239,190" onclick="objetoClicado(0)"shape="poly"></area>
+    <area  alt="e" key="" data-title="e" href="javascript:void(0)" coords="149,208,168,299,257,283,239,190" onclick="objetoClicado(0)"shape="poly"></area>
     <area alt="c"   data-title="c" href="javascript:void(0)" coords="287,212,262,237,271,269,296,279,334,253,316,211" onclick="objetoClicado(1)" shape="poly"></area>
     <area  alt="o"   data-title="o" href="javascript:void(0)" coords="363,204,345,240,368,271,404,249,400,213" onclick="objetoClicado(2)" shape="poly"></area>
-    <area  alt="h"   data-title="h" href="javascript:void(0)" coords="460,196,493,209,482,266,514,260,470,175,452,167,415,187,426,219,421,276,500,249" onclick="objetoClicado(3)" shape="poly"></area>
+    <area  alt="h"   data-title="h" href="javascript:void(0)" coords="497,207,450,165,418,186,424,244,416,268,486,266,502,266,512,266" onclick="objetoClicado(3)" shape="poly"></area>
     <area  alt="o1" data-title="o1" href="javascript:void(0)" coords="554,236,36" onclick="objetoClicado(4)" shape="circle"></area>
     <area  alt="u" data-title="u" href="javascript:void(0)" coords="599,202,607,270,676,279,682,210,641,202" onclick="objetoClicado(5)" shape="poly"></area>
     <area  alt="s" data-title="s" href="javascript:void(0)" coords="763,233,751,239,736,232,734,219,723,225,735,244,750,256,755,266,753,276,735,283,722,283,707,277,699,273,693,265,695,256,704,246,696,236,695,222,702,217,714,214,725,213,746,217" onclick="objetoClicado(6)" shape="poly"></area>
