--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   toolTip: function (data) {
   return $(data.target).data('data-title');	
   }
-  area[
+  areas: [
 	  {
 		key: 'e',
 		toolTip: 'Letra e'
