--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
   stroke: true,
   strokeWidth: 2, 
   strokeColor:'454B1B',
-  fade: true,showToolTip: true,
+  fade: true,
+  showToolTip: true,
   
   //Escala o <map> e seus elemento para a resolução do dispositivo
-  scaleMap: true,
-  showToolTip: true,
+  scaleMap: true
+  /*showToolTip: true,
   toolTip: function (data) {
   return $(data.target).data('data-title');	
   }
@@ -74,7 +75,7 @@
 	  }
 	  
 	  
-  ]
+  ]*/
 });})
 
 
