--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
 		</script>
-		<script type="text/javascript" src="/scripts/script.js"></script>
+		<script defer type="text/javascript" src="/scripts/script.js"></script>
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="/assets/icon/favicon.ico" type="image/x-icon">
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-icon-180x180.png">
