--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" style="<!--cursor: url('/assets/cursor.png'), url('/assets/cursor_32.png'), auto;-->">
 	<head>
 		<title>Ecohouse</title>
+		<link rel="stylesheet" href="/scripts/style.css">
 		<!-- Linka o arquivo 'jQuery' dentro de seu repositorio-->
+<script defer type="text/javascript" src="scripts/script.js"></script>
 <script type="text/javascript" src="jquery-3.7.1.min.js"></script>
 <!-- Linka para uma CDN 'entrega de conteudo por https', onde temos o elemento promise do ES mais recente -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"></script>
@@ -69,7 +71,7 @@
 
 
 		</script>
-		<script defer type="text/javascript" src="/scripts/script.js"></script>
+		
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="/assets/icon/favicon.ico" type="image/x-icon">
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-icon-180x180.png">
@@ -79,7 +81,7 @@
 		<link rel="manifest" href="/assets/icon/manifest.json">
 		
 		<!-- CSS -->
-		<link rel="stylesheet" href="/scripts/style.css">
+		
 		
 		<!-- Social Media Preview: -->
 		<meta property="og:title" content="Ecohouse">
