--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" style="<!--cursor: url('/assets/cursor.png'), url('/assets/cursor_32.png'), auto;-->">
 	<head>
 		<title>Ecohouse</title>
-		<link rel="stylesheet" href="/scripts/style.css">
+		
 		<!-- Linka o arquivo 'jQuery' dentro de seu repositorio-->
-<script defer type="text/javascript" src="scripts/script.js"></script>
+
 <script type="text/javascript" src="jquery-3.7.1.min.js"></script>
 <!-- Linka para uma CDN 'entrega de conteudo por https', onde temos o elemento promise do ES mais recente -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"></script>
@@ -81,7 +81,7 @@
 		<link rel="manifest" href="/assets/icon/manifest.json">
 		
 		<!-- CSS -->
-		
+		<link rel="stylesheet" href="/scripts/style.css">
 		
 		<!-- Social Media Preview: -->
 		<meta property="og:title" content="Ecohouse">
@@ -175,6 +175,7 @@
 		</div>
 		
 	<!-- JAVASCRIPT -->
+		<script type="text/javascript" src="scripts/script.js"></script>
 	
 	</body>
 </html>
