--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   stroke: true,
   strokeWidth: 2, 
   strokeColor:'454B1B',
-  
+  isSelectable: false,
+
   //Escala o <map> e seus elemento para a resolução do dispositivo
   scaleMap: true
 
