--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   //Habilita a borda 
   stroke: true,
   strokeWidth: 2, 
-  strokeColor:'454B1B',
+  
   isSelectable: false,
 
   //Escala o <map> e seus elemento para a resolução do dispositivo
+  isMask: true,
   scaleMap: true
 
 });
@@ -37,7 +38,7 @@ $('#mapaCozinha').mapster({
   //Habilita a borda 
   stroke: true,
   strokeWidth: 2, 
-  strokeColor:'454B1B',
+  
   
   //Escala o <map> e seus elemento para a resolução do dispositivo
   scaleMap: true
