--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
   strokeWidth: 2, 
   
   isSelectable: false,
-
+  scaleMap: true,
   //Escala o <map> e seus elemento para a resolução do dispositivo
-  isMask: true,
-  scaleMap: true
+  areas: [
+	  {key: 'titulo',
+	   isMask: true
+		  
+	  }
+]
+
+	
+  
 
 });
 $('#mapaCozinha').mapster({
