--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   scaleMap: true,
   //Escala o <map> e seus elemento para a resolução do dispositivo
   areas: [
-	  {key: 'titulo',
+	  {key: 'tela',
 	   isMask: true
 		  
 	  }
