--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	$(document).ready(function () {
         'use strict';
 	//Pega o id da imagem e usa funções do imageMapster
-	$('#fundoJogo').mapster({
+	$('/assets/titulo.jpeg').mapster({
   //Identifica cada <area> que tenha data-title
   mapkey: 'data-title',
   //Preenche a <area> clicada
