--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<div class="mainJogo" style="disableSelect"> <!-- Jogo -->
 			<div id="telaJogo" style="margin-top: 2%;">
 				<img id="fundoJogo" class="jogoFundo" alt="Jogo" usemap="#telaTitulo" src="/assets/titulo.jpeg"/>
-				<img id="cozinha" class="cozinha" alt="cozinha" src="/assets/comodo/cozinha.jpeg"/>
+				<img id="cozinha" class="cozinha" alt="cozinha" src="/assets/comodo/cozinha.png"/>
 				
 			</div>
 				
