--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   //Habilita a borda 
   stroke: true,
   strokeWidth: 2, 
-  scaleMap: true,
+  scaleMap: true
   //Escala o <map> e seus elemento para a resolução do dispositivo
 
 
