--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	$(document).ready(function () {
         'use strict';
 	//Pega o id da imagem e usa funções do imageMapster
-	$('#img[usemap]').mapster({
+	$('img[usemap]').mapster({
   //Identifica cada <area> que tenha data-title
   mapkey: 'data-title',
   //Preenche a <area> clicada
