--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <!-- Linka o arquivo 'imagemapster' dentro do seu repositorio -->
 <script type="text/javascript" src="dist/jquery.imagemapster.min.js"></script>
 		 <script>
+		console.log(comodoAtual)
 	//Inicia o plugin imageMapster 'jQuery'		
 				
 	$(document).ready(function () {
