--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise/dist/es6-promise.auto.min.js"></script>
 <!-- Linka o arquivo 'imagemapster' dentro do seu repositorio -->
 <script type="text/javascript" src="dist/jquery.imagemapster.min.js"></script>
-		 <script>
+		 <!--<script>
 		console.log(comodoAtual)
 	//Inicia o plugin imageMapster 'jQuery'		
 				
@@ -37,7 +37,7 @@
 		 
 
 
-		</script>
+		</script>-->
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="/assets/icon/favicon.ico" type="image/x-icon">
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-icon-180x180.png">
