--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				</map>
 				
 				<map name="telaFinal">
-					<area shape="rect" coords="0,0,1000,500" alt="Game Over" href="javascript:void(0)" onclick="window.location.reload()" id="final">
+					<area shape="rect" data-title="final" coords="0,0,1000,500" alt="Game Over" href="javascript:void(0)" onclick="window.location.reload()" id="final">
 				</map>
 		</div>
 		
