--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 			<b><font size="5">
 				<font size="4">FEITO PELO GRUPO 1 DA TURMA 3BINF,<br>COLÉGIO PRIMEIRO DE MAIO
 				<br><img src="/assets/interface/CPM_LOGO.png" style="width: 5%; min-width: 40px; margin-top: 6px; -webkit-filter: drop-shadow(0 2px 0 rgba(126, 162, 100, 1)); filter: drop-shadow(0 2px 0 rgba(126, 162, 100, 1));"></font>
+				<button class="botão" href="EcoHouse/calc.html" alt="calculadora" value="calcular">Calcular</button>
+			
 			</font></b>
 		</div>
 		</center>
