--- a/index.html
+++ b/index.html
@@ -124,13 +124,11 @@
 				</map>
 				
 				<map name="mapaQuarto">
-					<area shape="poly" data-key="notebook" coords="111,250,149,245,152,269,108,274" alt="Notebook" href="javascript:void(0)" onclick="javascript:objetoClicado(0)" id="objeto">
-					<area shape="poly" data-key="impressora" coords="169,233,155,236,161,263,207,258,202,233,186,233" alt="Impressora" href="javascript:void(0)" onclick="javascript:objetoClicado(1)" id="objeto">
-					<area shape="poly" data-key="alarme" coords="244,249,274,247,274,260,241,260" alt="Alarme" href="javascript:void(0)" onclick="javascript:objetoClicado(2)" id="objeto">
-					<area shape="circle" data-key="ventilador" coords="463,234,26" alt="Ventilador" href="javascript:void(0)" onclick="javascript:objetoClicado(3)" id="objeto">
-					<area shape="poly" data-key="luminariaq" coords="205,203,198,226,233,226,234,204,217,203" alt="Lumináriaq" href="javascript:void(0)" onclick="javascript:objetoClicado(4)" id="objeto">
-					<area shape="poly" data-key="telefoneq" coords="595,266,595,291,639,296,639,274" alt="Telefoneq" href="javascript:void(0)" onclick="javascript:objetoClicado(5)" id="objeto">
-					<area shape="poly" data-key="arq" coords="639,17,702,17,710,90,514,165,485,150,485,124" alt="Ar-condicionadoq" href="javascript:void(0)" onclick="javascript:objetoClicado(6)" id="objeto">
+					<area shape="poly" data-key="pc"coords="95,242,91,326,172,329,299,294,304,229,228,230" alt="Pc" href="javascript:void(0)" onclick="javascript:objetoClicado(0)" id="objeto">
+					<area shape="poly" data-key="impressora" coords="750,263,743,318,873,360,912,338,918,264" alt="Impressora" href="javascript:void(0)" onclick="javascript:objetoClicado(1)" id="objeto">
+					<area shape="poly" data-key="alarme" coords="334,298,334,253,403,253,402,297" alt="Alarme" href="javascript:void(0)" onclick="javascript:objetoClicado(2)" id="objeto">
+					<area shape="poly" data-key="ventilador" coords="600,234,600,287,612,294,664,295,666,233" alt="Ventilador" href="javascript:void(0)" onclick="javascript:objetoClicado(3)" id="objeto">
+					<area shape="poly" data-key="ar" coords="671,125,673,154,683,168,719,178,971,127,976,1,886,3" alt="Ar-condicionado" href="javascript:void(0)" onclick="javascript:objetoClicado(4)" id="objeto">
 				</map>
 				
 				<map name="mapaBanheiro">
