--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
 				</map>
 				
 				<map name="mapaBanheiro">
-					<area shape="poly" data-key="notebookb" coords="639,17,702,17,710,90,514,165,485,150,485,124" alt="Notebookb" href="javascript:void(0)" onclick="javascript:objetoClicado(0)" id="objeto">
-					<area shape="poly" data-key="speaker" coords="639,17,702,17,710,90,514,165,485,150,485,124" alt="Speaker" href="javascript:void(0)" onclick="javascript:objetoClicado(1)" id="objeto">
-					<area shape="poly" data-key="lavaroupa" coords="639,17,702,17,710,90,514,165,485,150,485,124" alt="Lava-roupa" href="javascript:void(0)" onclick="javascript:objetoClicado(2)" id="objeto">
-					<area shape="poly" data-key="chuveiro" coords="639,17,702,17,710,90,514,165,485,150,485,124" alt="Chuveiro" href="javascript:void(0)" onclick="javascript:objetoClicado(3)" id="objeto">
-					<area shape="poly" data-key="secador" coords="639,17,702,17,710,90,514,165,485,150,485,124" alt="Secador" href="javascript:void(0)" onclick="javascript:objetoClicado(4)" id="objeto">
+					<area shape="poly" data-key="notebook"coords="339,311,324,305,320,283,283,289,288,314,310,321" alt="Notebook" href="javascript:void(0)" onclick="javascript:objetoClicado(0)" id="objeto">
+					<area shape="poly" data-key="caixasom" coords="436,235,438,207,400,209,399,235" alt="Caixa-som" href="javascript:void(0)" onclick="javascript:objetoClicado(1)" id="objeto">
+					<area shape="poly" data-key="lavaroupa" coords="338,278,348,279,374,282,375,337,350,357,348,303,329,301,320,282" alt="Lava-roupa" href="javascript:void(0)" onclick="javascript:objetoClicado(2)" id="objeto">
+					<area shape="poly" data-key="chuveiro" coords="713,119,663,127,549,155,546,365,687,421,691,328,815,327,828,121" alt="Chuveiro" href="javascript:void(0)" onclick="javascript:objetoClicado(3)" id="objeto">
+					<area shape="poly" data-key="secador" coords="7,224,19,341,66,343,180,320,182,220" alt="Secador" href="javascript:void(0)" onclick="javascript:objetoClicado(4)" id="objeto">
 
 				
 				</map>
