--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
 				<map name="telaFinal">
 					<area shape="rect" data-key="final" coords="0,0,1000,500" alt="Game Over" href="javascript:void(0)" onclick="window.location.reload()" id="final">
 				</map>
+			<div id="telaFinal" class="interfaceJogo" style="position: fixed; visibility: hidden; z-index: 8;">
+    <div>
+        <h1>Parabéns!</h1>
+        <p>Sua pontuação: <span id="pontuacaoFinal">0</span></p>
+        <button onclick="window.location.reload()">Jogar Novamente</button>
+    </div>
+</div>
 		</div>
 		
 		<div class="headerFooter padding: auto;"> <!-- Footer -->
