--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
 				<font size="4">FEITO PELO GRUPO 1 DA TURMA 3BINF,<br>COLÉGIO PRIMEIRO DE MAIO
 				<br><img src="/assets/interface/CPM_LOGO.png" style="width: 5%; min-width: 40px; margin-top: 6px; -webkit-filter: drop-shadow(0 2px 0 rgba(126, 162, 100, 1)); filter: drop-shadow(0 2px 0 rgba(126, 162, 100, 1));"></font>
 				
-			<!-- AQUI-->
+			
 			</font></b>
+			<!-- AQUI//-->
 			<div id="telaFinal" class="interfaceJogo" style="position: fixed; visibility: hidden; z-index: 8;">
     <div>
         <h1>Parabéns!</h1>
@@ -161,7 +162,7 @@
         <button onclick="window.location.reload()">Jogar Novamente</button>
     </div>
 </div>
-	<!-- AQUI -->
+	<!-- //AQUI -->
 		</div>
 		</center>
 		
